k3s/sqlite-debug.yaml
apiVersion: v1
kind: Pod

metadata:
  name: sqlite-debug
  namespace: cam-det

spec:
  containers:
    - name: debug
      image: busybox

      command:
        - sleep
        - "3600"

      volumeMounts:
        - name: sqlite-storage
          mountPath: /data

  volumes:
    - name: sqlite-storage
      persistentVolumeClaim:
        claimName: sqlite-pvc
