k3s/06-signaling-app-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: signaling-app

  labels:
    app.kubernetes.io/name: signaling-app
    app.kubernetes.io/part-of: cam-system

  namespace: cam-det

spec:
  selector:
    app: signaling-app

  ports:
    - port: 3002
      targetPort: 3002

  type: ClusterIP
