k3s/06-signaling-redis-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: signaling-redis

  labels:
    app.kubernetes.io/name: signaling-redis
    app.kubernetes.io/part-of: cam-system

  namespace: cam-det

spec:
  selector:
    app: signaling-redis

  ports:
    - port: 6379
      targetPort: 6379

  type: ClusterIP
