k3s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signaling-ingress
  namespace: cam-det
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: traefik

  rules:
    - host: signaling.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signaling-app
                port:
                  number: 3002
